--- a/app/src/main/res/layout/activity_otp_verification.xml
+++ b/app/src/main/res/layout/activity_otp_verification.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FPWOtp">
+    tools:context=".OTPVerification">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,31 +17,40 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tvSignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:layout_marginStart="40dp"
+                android:text="Sign Up"
+                android:textColor="@color/primary"
+                android:textSize="31sp"
+                android:textStyle="bold" />
+
             <ImageView
-                android:id="@+id/fpwOTPLogo"
+                android:id="@+id/otpLogo"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="65dp"
                 android:layout_marginEnd="31dp"
                 android:src="@drawable/icon_otp" />
 
             <TextView
-                android:id="@+id/tvFPWVerificationText"
+                android:id="@+id/tvOTPVerification"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginBottom="20dp"
                 android:text="OTP Verification"
                 android:textColor="@color/black"
                 android:textSize="31sp"
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/tvFPWText"
+                android:id="@+id/tvOTPText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -51,7 +60,7 @@
                 android:textAlignment="center"/>
 
             <TextView
-                android:id="@+id/tvFPWPhoneText"
+                android:id="@+id/tvPhoneText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -61,18 +70,18 @@
                 android:textAlignment="center"/>
 
             <com.chaos.view.PinView
-                android:id="@+id/pvFPWOtp"
+                android:id="@+id/pvOTP"
                 style="@style/PinWidget.PinView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="20dp"
                 android:inputType="number"
                 android:cursorVisible="true"
                 android:itemBackground="@color/btn_color"
                 app:itemCount="6"
-                app:itemWidth="45dp"
-                app:itemHeight="45dp"
+                app:itemWidth="40dp"
+                app:itemHeight="40dp"
                 app:itemRadius="10dp"
                 app:lineWidth="1dp"
                 app:hideLineWhenFilled="true"/>
@@ -84,9 +93,10 @@
                 android:layout_marginTop="8dp">
 
                 <TextView
-                    android:id="@+id/tvReceiveOTP"
+                    android:id="@+id/tvTextReceive"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
                     android:text="Didn't receive OTP?"
                     android:textColor="@color/black"
                     android:textSize="16sp"
@@ -95,26 +105,35 @@
                     app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
-                    android:id="@+id/tvFPWResend"
+                    android:id="@+id/tvResend"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:onClick="resendFPWOtp"
                     android:text="@string/underline_text_resend"
                     android:textColor="@color/text_blue"
                     android:textSize="16sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/tvReceiveOTP"
+                    app:layout_constraintBottom_toBottomOf="@+id/tvTextReceive"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tvReceiveOTP"
-                    app:layout_constraintTop_toTopOf="@+id/tvReceiveOTP" />
+                    app:layout_constraintStart_toEndOf="@+id/tvTextReceive"
+                    app:layout_constraintTop_toTopOf="@+id/tvTextReceive" />
+
+                <TextView
+                    android:id="@+id/tvTimer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:textColor="#1991D0"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/tvTextReceive"
+                    app:layout_constraintStart_toEndOf="@+id/tvTextReceive"
+                    app:layout_constraintTop_toTopOf="@+id/tvTextReceive" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnFPWVerify"
+                android:id="@+id/btnVerify"
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="45dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/btn_rounded"
                 android:text="Verify OTP"
