--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -17,13 +17,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/appLogo"
                 android:layout_width="153dp"
                 android:layout_height="157dp"
+                android:layout_marginTop="20dp"
                 android:layout_gravity="center" />
 
             <TextView
