--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -59,7 +59,7 @@
         android:id="@+id/orderDetails_totalItemText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TOTAL ITEM: "
+        android:text="Total Item: "
         android:textStyle="bold"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
