--- a/app/src/main/res/layout/activity_checkout_shipping.xml
+++ b/app/src/main/res/layout/activity_checkout_shipping.xml
@@ -20,7 +20,10 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentLeft="true"
-            android:layout_margin="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
             android:src="@drawable/ic_back_arrow"
             app:tint="@color/black" />
 
@@ -134,7 +137,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:text=">"
+                        android:text="&gt;"
                         android:textColor="@color/black"
                         android:textSize="16dp"
                         app:layout_constraintStart_toEndOf="@+id/progressBar_information_textView"
@@ -157,7 +160,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:text=">"
+                        android:text="&gt;"
                         android:textColor="@color/black"
                         android:textSize="16dp"
                         app:layout_constraintStart_toEndOf="@+id/progressBar_shipping_textView"
@@ -351,7 +354,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:text="< Return to Information"
+                android:text="&lt; Return to Information"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
 
