--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,23 @@
         android:textSize="40sp"
         android:textStyle="bold" />
 
+    <ImageView
+        android:id="@+id/ivCart"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_gravity="end"
+        android:src="@drawable/ic_cart"/>
+
+
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="625dp"
         android:layout_marginTop="70dp"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
