--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -53,11 +53,18 @@
             android:visibility="invisible"
             tools:visibility="visible" />
 
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeCart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/spaceBottom"
+            android:layout_marginTop="70dp">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cart_items_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/spaceBottom" />
+            android:layout_height="match_parent"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <Space
             android:id="@+id/spaceBottom"
