--- a/app/src/main/res/layout/activity_checkout_information.xml
+++ b/app/src/main/res/layout/activity_checkout_information.xml
@@ -194,6 +194,33 @@
                     android:background="@color/horizontal_line" />
 
                 <LinearLayout
+                    android:id="@+id/total_quantity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/total_qty"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Total Quantity"
+                        android:textColor="@color/black"
+                        android:textSize="19sp" />
+
+                    <TextView
+                        android:id="@+id/total_qtyValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="28sp"
+                        android:textColor="@color/black" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/total_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
