--- a/app/src/main/res/layout/list_item_cart_item.xml
+++ b/app/src/main/res/layout/list_item_cart_item.xml
@@ -40,12 +40,15 @@
             android:id="@+id/bookPrice_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="RM 10.50"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
+            android:text="RM 10.50"
             android:textColor="@color/black"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/bookTitle_textView"
             app:layout_constraintTop_toBottomOf="@+id/bookTitle_textView"
-            app:layout_constraintStart_toStartOf="@+id/bookTitle_textView" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/decreaseBookQuantity_icon"
