--- a/app/src/main/res/layout/fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_admin.xml
@@ -19,9 +19,11 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentLeft="true"
-            android:layout_margin="15dp"
-            android:src="@drawable/ic_baseline_arrow_back_24"
-            />
+            android:layout_marginBottom="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/ic_baseline_logout_24" />
 
         <TextView
             android:id="@+id/AdminFragment_mainTitle"
